--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://enemies/test_enemy/test_enemy.tscn", "res://player/gun/gun.tscn", "res://levels/main_level.tscn", "res://levels/test_room.tscn", "res://UI/score/score_ui.tscn", "res://player/player.tscn"]
+open_scenes=["res://enemies/test_enemy/test_enemy.tscn", "res://player/gun/gun.tscn", "res://levels/main_level.tscn", "res://levels/test_room.tscn", "res://UI/score/score_ui.tscn", "res://player/player.tscn", "res://UI/pause_menu/pause_menu.tscn"]
 
 [ScriptEditor]
 
