--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,3 +1,9 @@
+[folding]
+
+node_unfolds=[NodePath("."), PackedStringArray("Transform", "Collision"), NodePath("collider"), PackedStringArray("shape", "Transform"), NodePath("collider/MeshInstance3D"), PackedStringArray("mesh", "Transform"), NodePath("GPUParticles3D"), PackedStringArray("Draw Passes", "draw_skin", "Process Material", "process_material", "Time", "draw_pass_1"), NodePath("OmniLight3D"), PackedStringArray("Light", "Shadow")]
+resource_unfolds=["res://enemies/test_enemy/test_enemy.tscn::BoxShape3D_7iuth", PackedStringArray(), "res://enemies/test_enemy/test_enemy.tscn::BoxMesh_nh6x3", PackedStringArray(), "res://enemies/test_enemy/test_enemy.tscn::ParticleProcessMaterial_6a78v", PackedStringArray(), "res://enemies/test_enemy/test_enemy.tscn::BoxMesh_0vomn", PackedStringArray()]
+nodes_folded=[]
+
 [docks]
 
 dock_filesystem_split=0
@@ -16,21 +22,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://enemies/test_enemy/test_enemy.tscn", "res://player/gun/gun.tscn", "res://levels/main_level.tscn", "res://levels/test_room.tscn", "res://UI/score/score_ui.tscn", "res://player/player.tscn", "res://UI/pause_menu/pause_menu.tscn"]
+open_scenes=["res://UI/main_menu/main_menu.tscn", "res://enemies/test_enemy/test_enemy.tscn", "res://levels/main_level.tscn", "res://UI/settings_menu/settings_menu.tscn", "res://player/player.tscn", "res://UI/death_menu/death_menu.tscn", "res://UI/score/score_ui.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://UI/death_menu/death_menu.gd", "res://enemies/enemy.gd", "res://player/gun/gun.gd", "res://UI/pause_menu/pause_menu.gd", "res://player/player.gd", "res://score.gd", "res://score_ui.gd", "res://enemies/test_enemy/test_enemy.gd", "res://test_enemy_spawner.gd"]
+open_scripts=["res://UI/death_menu/death_menu.gd", "res://enemies/enemy.gd", "res://player/gun/gun.gd", "res://UI/main_menu/main_menu.gd", "res://player/player.gd", "res://score.gd", "res://score_ui.gd", "res://UI/settings_menu/settings_menu.gd", "res://enemies/test_enemy/test_enemy.gd", "res://levels/WorldEnvironment.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
-
-[editor_log]
-
-log_filter_0=true
-log_filter_2=true
-log_filter_1=false
-log_filter_3=false
-log_filter_4=true
-collapse=false
-show_search=true
