--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 62,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 17.0,
+"row": 10,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,7 +77,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 6.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,10 +87,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -101,11 +101,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 89,
-"scroll_position": 72.0,
+"row": 21,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -129,10 +129,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 18,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://levels/lamp.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
