Added to new PC

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -22,11 +22,21 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://UI/main_menu/main_menu.tscn", "res://enemies/test_enemy/test_enemy.tscn", "res://levels/main_level.tscn", "res://UI/settings_menu/settings_menu.tscn", "res://player/player.tscn", "res://UI/death_menu/death_menu.tscn", "res://UI/score/score_ui.tscn", "res://player/gun/gun.tscn"]
+open_scenes=["res://enemies/spawners/enemy_spawner_1.tscn", "res://player/player.tscn", "res://levels/main_level.tscn", "res://player/gun/gun.tscn", "res://enemies/wave_manager.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://UI/death_menu/death_menu.gd", "res://enemies/enemy.gd", "res://player/gun/gun.gd", "res://levels/lamp.gd", "res://UI/main_menu/main_menu.gd", "res://player/player.gd", "res://score.gd", "res://score_ui.gd", "res://UI/settings_menu/settings_menu.gd", "res://enemies/test_enemy/test_enemy.gd", "res://levels/WorldEnvironment.gd"]
+open_scripts=["res://UI/death_menu/death_menu.gd", "res://enemies/enemy.gd", "res://enemies/spawners/enemy_spawner_1.gd", "res://player/gun/gun.gd", "res://levels/lamp.gd", "res://UI/main_menu/main_menu.gd", "res://player/player.gd", "res://score.gd", "res://score_ui.gd", "res://UI/settings_menu/settings_menu.gd", "res://enemies/test_enemy/test_enemy(2).gd", "res://enemies/test_enemy/test_enemy.gd", "res://enemies/spawners/test_enemy_spawner.gd", "res://enemies/wave_manager.gd", "res://levels/WorldEnvironment.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
